# pyg-tic

./: .gitignore  README.md  pyg-tic-tac-toe.py  pyg_tic_tac_toe.py  setup.cfg
