[metadata]
name = pyg-tic
version = 0.0.0
description = Tic-tac-toe game using pygame
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/pyg-tic
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
    pygame
python_requires = >= 3.6.1

[options.packages.find]
exclude =

[options.entry_points]
console_scripts =